[gd_scene load_steps=2 format=3 uid="uid://dmlvm2nf8xi3q"]

[ext_resource type="Script" uid="uid://7i8ixv3ea550" path="res://scripts/ui/PauseMenu.gd" id="1_ubb4e"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ubb4e")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7058824)

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(400, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "\"Пауза\""
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "\"Продолжить\""

[node name="SaveButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "\"Сохранить\""

[node name="MainMenuButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "\"Выйти в главное меню\""
